# pypirepo

./: .gitignore  .travis.yml  README.md  readme.md  requirements-dev.txt  requirements.txt  setup.cfg
src/main/pypirepo/: __init__.py  config.ini  config.py  login.py  manager.py  workflow.py
src/test/pypirepo_test/: .pypirc  config_test.py  login_test.py  manager_test.py
tool/: github_squash.py  github_squash.sh  release_update.py
