[metadata]

name = pypirepo
version = 0.3.1

requires-python = >=3.8

author = Andrei Pozolotin
author-email = andrei.pozolotin@gmail.com

summary = pypi repository operations

description-file = readme.md
description-content-type = text/markdown; charset=UTF-8

home-page = https://github.com/random-python/pypirepo

license = Apache-2

classifier =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

keywords =
    pypi
    repository
    operations

[files]


[options]

packages =
    pypirepo

package_dir =
    pypirepo = src/main/pypirepo

[entry_points]

[pbr]

warnerrors = True
skip_authors = True
skip_git_sdist = False
skip_changelog = True

[build_reno]

rel-notes-dir = reno
output-file = RELEASE.rst
